--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <p class="subtitle">Built as part of the <strong>Programming course</strong> at Nova SBE – Spring 2025</p>
 
     <div class="form-row">
-      <p>This web app was created by a group of 3–4 students as a final project. It uses real surf forecast data from Stormglass.io and allows users to track wave, wind, and swell conditions at popular Portuguese beaches.</p>
+      <p>This web app was created by a group of 3 students as a final project. It uses real surf forecast data from Stormglass.io and allows users to track wave, wind, and swell conditions at popular Portuguese beaches.</p>
       <p>Technologies used include: <strong>Python</strong>, <strong>Flask</strong>, <strong>HTML/CSS</strong>, and external APIs like <strong>Stormglass</strong> and SMTP for email alerts.</p>
       <p>We hope you enjoy using it! 🤙</p>
     </div>
