--- a/static/style.css
+++ b/static/style.css
@@ -165,3 +165,39 @@
     list-style-type: none;
   }
   
+
+  .two-column {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+    justify-content: space-between;
+  }
+  
+  .left-column, .right-column {
+    flex: 1;
+  }
+  
+  .right-column {
+    background-color: #f1fdfd;
+    padding: 1.5em;
+    border-radius: 12px;
+    border-left: 5px solid #00796b;
+    font-size: 1.05em;
+    line-height: 1.6em;
+  }
+  
+  .right-column h2, .right-column h3 {
+    color: #004d40;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+  
+  .right-column ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  
+  .right-column ul li {
+    margin-bottom: 0.8em;
+  }
+  
